プロトタイプ名の表示、修正

--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -2,7 +2,7 @@
   <div class="inner">
     <div class="prototype__wrapper">
       <p class="prototype__hedding">
-        <%= "プロトタイプのタイトル"%>
+        <%= @prototype.title%>
       </p>
       <%= link_to @prototype.user.name, "/users/#{current_user.id}", class: :prototype__user %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
